iOS double scrollbar fix.

--- a/src/Isotope/Isotope/Areas/Front/ClientApp/styles/main.scss
+++ b/src/Isotope/Isotope/Areas/Front/ClientApp/styles/main.scss
@@ -16,6 +16,8 @@ html, body {
     background: $gray-200;
 }
 
+::-webkit-scrollbar { display: none; }
+
 .simplebar-scrollbar:before {
   background: $dark;
 }
